# Projeto-XML

./: gitignore.gitignore  main.py  main.spec  projetoxml.ipynb  pyproject.toml  requirements.txt
