[project]
name = "projeto-xml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.5",
    "asttokens==3.0.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "numpy==2.4.2",
    "openpyxl==3.1.5",
    "packaging==26.2",
    "pandas==3.0.1",
    "parso==0.8.6",
    "pefile==2024.8.26",
    "pillow==12.1.1",
    "pip==25.0.1",
    "platformdirs==4.9.2",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyinstaller==6.20.0",
    "pyinstaller-hooks-contrib==2026.5",
    "python-dateutil==2.9.0.post0",
    "pywin32-ctypes==0.2.3",
    "pyzmq==27.1.0",
    "setuptools==82.0.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "ttkbootstrap==1.20.1",
    "tzdata==2025.3",
    "wcwidth==0.6.0",
    "xmltodict==1.0.4",
]
